<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.CartActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:drawableLeft="@drawable/ic_cart_colored"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/your_cart"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <LinearLayout
               android:id="@+id/ll_main"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">


               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/rv_cart_items"
                   android:fadingEdge="horizontal"
                   android:fadingEdgeLength="30dp"
                   android:fillViewport="false"
                   android:requiresFadingEdge="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" />





               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="20dp"
                   android:layout_marginTop="20dp"
                   android:layout_marginEnd="20dp"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="2"
                       android:text="@string/total_qty" />


                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text=":" />

                   <TextView
                       android:id="@+id/lbl_total_qty"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:gravity="end"
                       android:text="@string/fetching_data"
                       android:textColor="@color/colorBlack"
                       android:textStyle="bold" />

               </LinearLayout>


               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="20dp"
                   android:layout_marginEnd="20dp"

                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="2"
                       android:text="@string/total_amount" />


                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text=":" />

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:id="@+id/lbl_total_amount"
                       android:gravity="end"
                       android:text="@string/fetching_data"
                       android:textColor="@color/colorBlack"
                       android:textSize="18sp"
                       android:textStyle="bold" />

               </LinearLayout>

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="20dp"
                   android:text="@string/payment_method"
                   android:textColor="@color/colorBlack"
                   android:textSize="18sp"
                   android:textStyle="bold" />

               <RadioGroup
                   android:id="@+id/radio_group"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="20dp"
                   android:layout_marginEnd="20dp">

                   <RadioButton
                       android:id="@+id/radio_cash"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:paddingLeft="10dp"
                       android:text="@string/cash"
                       android:textStyle="bold" />

                   <RadioButton
                       android:id="@+id/radio_card"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:paddingLeft="10dp"
                       android:text="@string/card"
                       android:textStyle="bold" />

               </RadioGroup>


               <LinearLayout
                   android:id="@+id/ll_checkout"
                   android:layout_width="wrap_content"
                   android:layout_height="@dimen/edit_text_height"
                   android:layout_gravity="end"
                   android:layout_margin="20dp"
                   android:layout_marginTop="20dp"
                   android:background="@drawable/btn_style"
                   android:orientation="horizontal">

                   <ImageView
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:layout_gravity="center_vertical"
                       android:layout_marginStart="20dp"
                       android:background="@drawable/ic_checkout" />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_marginStart="10dp"
                       android:layout_marginEnd="20dp"
                       android:gravity="center"
                       android:text="@string/checkout"
                       android:textColor="@color/colorWhite"
                       android:textSize="18sp"
                       android:textStyle="bold" />

               </LinearLayout>
           </LinearLayout>

           <LinearLayout
               android:id="@+id/ll_empty"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
               android:orientation="vertical"
               android:visibility="gone">

               <com.airbnb.lottie.LottieAnimationView
                   android:id="@+id/animation_view"
                   android:layout_width="match_parent"
                   android:layout_height="250dp"
                   android:layout_margin="5dp"
                   android:adjustViewBounds="true"
                   app:lottie_autoPlay="true"
                   app:lottie_fileName="empty.json"
                   app:lottie_loop="true"
                   app:lottie_repeatMode="reverse" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:text="@string/empty_list"
                   android:textSize="20dp" />

           </LinearLayout>

       </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>