<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.DriverActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txt_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_text_style"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="10dp"
                        android:hint="@string/card_name"
                        android:paddingLeft="20dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/txt_card_no"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_text_style"
                        android:drawableLeft="@drawable/ic_card_grey"
                        android:drawablePadding="10dp"
                        android:hint="@string/card_number"
                        android:inputType="phone"
                        android:maxLength="12"
                        android:paddingLeft="20dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/txt_bank"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_text_style"
                        android:drawableLeft="@drawable/ic_bank"
                        android:drawablePadding="10dp"
                        android:hint="@string/bank"
                        android:paddingLeft="20dp"
                        android:singleLine="true" />

                    <LinearLayout
                        android:id="@+id/ll_save"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_style"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/save"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="@string/saved_cards"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>